Rollable dice are larger

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -373,7 +373,7 @@
 							<td>
 								<span class="bold">Swing:</span>
 							</td>
-							<td>
+							<td style="width: 15%">
 								{{data.baseDamage.swing}}
 								<label class="fa fa-dice-six rollable" data-level="{{data.baseDamage.swing}}"
 								   data-label="Makes a &lt;b&gt;Swing&lt;/b&gt; Damage roll." data-type="damage"></label>
@@ -408,7 +408,7 @@
 							<td>
 								<span class="bold">Thrust:</span>
 							</td>
-							<td>
+							<td style="width: 15%">
 								{{data.baseDamage.thrust}}
 								<label class="fa fa-dice-six rollable" data-level="{{data.baseDamage.thrust}}"
 								   data-label="Makes a &lt;b&gt;Thrust&lt;/b&gt; Damage roll." data-type="damage"></label>
