--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -2483,14 +2483,14 @@
 							<label>Damage Type One:</label>
 							<select name="data.bodyType.damageTypeOne">
 								{{#select data.bodyType.damageTypeOne}}
-									<option value="Burn">Burn</option>
-									<option value="Cor">Cor</option>
-									<option value="Cr">Cr</option>
-									<option value="Cut">Cut</option>
-									<option value="Fat">Fat</option>
-									<option value="Imp">Imp</option>
-									<option value="Pi">Pi</option>
-									<option value="Tox">Tox</option>
+									<option value="Burn">Burning</option>
+									<option value="Cor">Corrosion</option>
+									<option value="Cr">Crushing</option>
+									<option value="Cut">Cutting</option>
+									<option value="Fat">Fatigue</option>
+									<option value="Imp">Impaling</option>
+									<option value="Pi">Piercing</option>
+									<option value="Tox">Toxic</option>
 								{{/select}}
 							</select>
 						</div>
@@ -2498,14 +2498,14 @@
 							<label>Damage Type Two:</label>
 							<select name="data.bodyType.damageTypeTwo">
 								{{#select data.bodyType.damageTypeTwo}}
-									<option value="Burn">Burn</option>
-									<option value="Cor">Cor</option>
-									<option value="Cr">Cr</option>
-									<option value="Cut">Cut</option>
-									<option value="Fat">Fat</option>
-									<option value="Imp">Imp</option>
-									<option value="Pi">Pi</option>
-									<option value="Tox">Tox</option>
+									<option value="Burn">Burning</option>
+									<option value="Cor">Corrosion</option>
+									<option value="Cr">Crushing</option>
+									<option value="Cut">Cutting</option>
+									<option value="Fat">Fatigue</option>
+									<option value="Imp">Impaling</option>
+									<option value="Pi">Piercing</option>
+									<option value="Tox">Toxic</option>
 								{{/select}}
 							</select>
 						</div>
