--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -128,27 +128,30 @@
 
 		{{!-- Sheet Tab Navigation --}}
 		<nav id="tabselect" class="sheet-tabs tabs" data-group="primary">
-				<div class="header">
-						<a class="item" data-tab="stats">Main</a>
-				</div>
-				<div class="header">
-						<a class="item" data-tab="traits">Advantages & Disadvantages</a>
-				</div>
-				<div class="header">
-						<a class="item" data-tab="rollable">Skills & Techniques</a>
-				</div>
-				<div class="header">
-						<a class="item" data-tab="combat">Combat</a>
-				</div>
-				<div class="header">
-						<a class="item" data-tab="items">Items</a>
-				</div>
-				<div class="header">
-					<a class="item" data-tab="armour-display">Armour Display</a>
-				</div>
-				<div class="header">
-					<a class="item" data-tab="body-type">Body Type</a>
-				</div>
+			<div class="header">
+					<a class="item" data-tab="stats">Main</a>
+			</div>
+			<div class="header">
+					<a class="item" data-tab="traits">Advantages & Disadvantages</a>
+			</div>
+			<div class="header">
+					<a class="item" data-tab="rollable">Skills & Techniques</a>
+			</div>
+			<div class="header">
+					<a class="item" data-tab="combat">Combat</a>
+			</div>
+			<div class="header">
+					<a class="item" data-tab="items">Items</a>
+			</div>
+			<div class="header">
+				<a class="item" data-tab="armour-display">Armour Display</a>
+			</div>
+			<div class="header">
+				<a class="item" data-tab="body-type">Body Type</a>
+			</div>
+			<div class="header">
+				<a class="item" data-tab="magic">Magic</a>
+			</div>
 		</nav>
 
 		{{!-- Sheet Body --}}
@@ -2708,6 +2711,87 @@
 							</tr>
 						</table>
 					</div>
+				</div>
+			</div>
+
+			{{!-- Magic Tab --}}
+			<div id="magic" class="tab magic" data-tab="magic" data-group="primary">
+				<div style="display: flex; flex-direction: column;">
+					<table>
+						<tr>
+							<td>
+								Magic Attribute
+							</td>
+							<td style="display: flex">
+								<span><input type="text" name="data.magic.attribute" value="{{data.magic.attribute}}" placeholder="Intelligence" /></span>
+								<span><input type="number" name="data.magic.attributeMod" value="{{data.magic.attributeMod}}" placeholder="0" style="width: 25px"/></span>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								Magery
+							</td>
+							<td>
+								<input type="number" name="data.magic.magery" value="{{data.magic.magery}}" placeholder="0" />
+							</td>
+						</tr>
+						<tr>
+							<td>
+								Magical Ability
+							</td>
+							<td>
+								{{data.magic.totalMagicAttribute}}
+							</td>
+						</tr>
+					</table>
+					<table>
+						<tr class="item item-header">
+							<td class="item-image"></td>
+							<td class="item-name">Spell</td>
+							<td class="item-notes">Notes</td>
+							<td class="item-points">Points</td>
+							<td class="item-rolls">Level</td>
+							<td class="item-controls"></td>
+						</tr>
+						{{#each actor.spellCategories as |category cat|}}
+							{{#unless (eq category "")}}
+								<tr class="item item-header trait-category-header">
+									<td colspan="6">
+										<a class="accordion" id="s-accordion-clickable-{{category}}">{{category}}</a>
+									</td>
+								</tr>
+							{{/unless}}
+							{{#each ../actor.items as |item id|}}
+								{{#if (eq type "Spell")}}
+									{{#if (eq item.data.subCategory category)}}
+										<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
+											<td class="item-image" style="width: 24px; padding: 0 2px">
+												<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+											</td>
+											<td class="item-name">
+												{{item.name}}
+											</td>
+											<td class="item-notes">
+												{{data.shortNotes}}
+											</td>
+											<td class="item-points" style="width: 4em;">
+												{{data.points}}
+											</td>
+											<td class="item-skill" style="width: 3em;">
+												<label for="data.level" class="fa fa-dice-six rollable" data-level="{{data.level}}"
+													   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
+												{{data.level}}
+											</td>
+											<td class="item-controls" style="width: 30px;">
+												<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+												<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+											</td>
+										</tr>
+									{{/if}}
+								{{/if}}
+							{{/each}}
+						{{/each}}
+					</table>
 				</div>
 			</div>
 		</section>
